@@ -4,12 +4,11 @@ Memosyne analysis:
 -document
 -release
 -research section on web site
--add Ryan to authors
 
 
 Mnemosyne 1.0:
 
--automatic backups
+-show actual interval in status bar
 
 -tip of the day
 
@@ -20,6 +19,8 @@ Mnemosyne 1.0:
 -small version of Mnemosyne logo, add logo to about and getting started
 
 -desktop file to /usr/share/applications, icon file (also Windows)
+
+-check automatic backups
 
 -website:
   relative CSS layout 
@@ -49,9 +50,8 @@ Mnemosyne 1.0.x series:
 
 -basic graphical statistics
 
--write some example plugins
+-write some more example plugins
 
--show actual interval in status bar
 
 
 
